#                Tcl/Tk Project Manager
#        Distributed under GNU Public License
# Copyright (c) "Sergey Kalinin", 2001, http://nuk-svk.ru
# Author: Sergey Kalinin banzaj28@yandex.ru
#########################################################

0.4.5
20.02.2018
- Refactoring auto update file structure (tree). Now structure updated when file was saving
- Refactoring "Settings" dialog

19.02.2018
- Fix "New file" ctrl+n hotkey

18.02.2018
- Fixed edit files into root node from file browser tree
- Change "Delete project" dialog and procedure

17.02.2018
- Refactoring "Add New Projects" "Project Settings" (e.t.c.) dialogs
- Added "Add as new project" dialog for file browser
- Add popup menu for file browser
- Fixed some highlight bug

14.02.2018
- Added saving main window geometry into projman.conf file when close programm
- Fixed AutoComplite precedure for TCL/TK-projects
- Added colored icon for main window
- Fixed "Close all" procedure if opened files from projects and file browser
- Fixed parsing some procedure name like ::proc::name or proc_na::me(aa) and parameters {{} {} {}}
- Added opening last active project when project run
- Fixed Windows OS running without installation

13.02.2018
- Added gray theme
- Fixed work with file from directory (FileBrowser function).


08.02.2018
- Auto indent added for () [] braces
- File Browser added. Now we will edited any file without project

07.02.2018
- Tcl, Perl, PHP highlight comment procedure fixed
- Help file Text.html utf-8 encoding
- Change hotkeys "Control+," "Control+." "Control+/" (commect selected, uncoment selected, select all)
- Add new function Comments/Uncomment selected text

05.02.2018
- Added binding mouse button: click on notebook tab highlight opened file name in tree
- Change "Paste from Clipboard" function
- Change popup editor menu (undo, redo, copy, paste, cut functions)
- Change Logo and About dialog
- Russian help files was conerting into utf-8 encode
- Change help file load procedure

04.02.2018