@@ -75,3 +75,4 @@ set color(sql) "#ffff828f0000"
 # Last active project (changed automaticaly)
 set workingProject ""
 
+
