@@ -9,6 +9,8 @@
 20.02.2018
 - Refactoring auto update file structure (tree). Now structure updated when file was saving
 - Refactoring "Settings" dialog
+- Fix saving "Show dot files" option
+- Fixed correctly highlightning procedure names
 
 19.02.2018
 - Fix "New file" ctrl+n hotkey
@@ -382,5 +384,7 @@ characters to the right of the insertion cursor.
     - Fix small error with delete project procedure
     - Fix uncorrect cursor position counter into editor    
     
+
+
 
 
